入試デザイン完成

--- a/japanese/entranceExamination-ja.html
+++ b/japanese/entranceExamination-ja.html
@@ -37,46 +37,50 @@
     </header>
     <!--メイン-->
     <main class="page-main">
-        <div class="page-main__header">
-            <h1 class="page-submain__header">入学試験</h1>
+        <div class="main-inner">
+            <div class="page-main__header">
+                <h1 class="page-submain__header">入学試験</h1>
+            </div>
+            <div class="main-table">
+                <table border="1" class="main-table__contents">
+                    <tr>
+                        <th>出願方法</th>
+                        <td>Web出願</td>
+                    </tr>
+                    <tr>
+                        <th>出願日</th>
+                        <td>3/7(土)</td>
+                    </tr>
+                    <tr>
+                        <th>試験日</th>
+                        <td>3/21(土)</td>
+                    </tr>
+                    <tr>
+                        <th>選考内容</th>
+                        <td>第1次選考:書類審査<br> 第2次選考:学力審査(200点満点(英語60分100点、数学60分100点))
+                            <br> 最終選考:面接
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>合格発表</th>
+                        <td>4/4(土)</td>
+                    </tr>
+                    <tr>
+                        <th>入学手続締切日</th>
+                        <td>4/11(土)</td>
+                    </tr>
+                    <tr>
+                        <th>出願資格</th>
+                        <td>TOEIC600点以上もしくはTOEFL50点以上<br> 主要3科目(国、数、英)の成績が5段階表示で4以上
+                            <br> Webによる学校説明会に本人が出席
+                    </tr>
+                    <tr>
+                        <th>募集定員</th>
+                        <td>100人</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <table border="1">
-            <tr>
-                <th>出願方法</th>
-                <td>Web出願</td>
-            </tr>
-            <tr>
-                <th>出願日</th>
-                <td>3/7(土)</td>
-            </tr>
-            <tr>
-                <th>試験日</th>
-                <td>3/21(土)</td>
-            </tr>
-            <tr>
-                <th>選考内容</th>
-                <td>第1次選考:書類審査<br> 第2次選考:学力審査(200点満点(英語60分100点、数学60分100点))
-                    <br> 最終選考:面接
-                </td>
-            </tr>
-            <tr>
-                <th>合格発表</th>
-                <td>4/4(土)</td>
-            </tr>
-            <tr>
-                <th>入学手続締切日</th>
-                <td>4/11(土)</td>
-            </tr>
-            <tr>
-                <th>出願資格</th>
-                <td>TOEIC600点以上もしくはTOEFL50点以上<br> 主要3科目(国、数、英)の成績が5段階表示で4以上
-                    <br> Webによる学校説明会に本人が出席
-            </tr>
-            <tr>
-                <th>募集定員</th>
-                <td>100人</td>
-            </tr>
-        </table>
     </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
