--- a/french/entranceExamination-fr.html
+++ b/french/entranceExamination-fr.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header-en.css">
     <link rel="stylesheet" href="../css/style-fr.css">
+    <link rel="stylesheet" href="../css/entranceExamination-ja.css">
     <title>Examen d'entrée</title>
 </head>
 
@@ -25,10 +26,14 @@
         <nav class="page-header__menu">
             <ol>
                 <li class="menu-index menu" id="header-menu-index"><a href="index-fr.html">Accueil</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-fr.html">Introduction à l'école</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-fr.html">Contenu pédagogique</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-fr.html">Matériel scolaire</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-fr.html">Examen d'entrée</a></li>
+                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-fr.html">Introduction à l'école</a>
+                </li>
+                <li class="menu-content menu" id="header-menu-content"><a href="content-fr.html">Contenu pédagogique</a>
+                </li>
+                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-fr.html">Matériel
+                        scolaire</a></li>
+                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-fr.html">Examen d'entrée</a>
+                </li>
                 <li class="menu-access menu" id="header-menu-access"><a href="access-fr.html">Accès</a></li>
                 <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-fr.html">Enquête</a></li>
             </ol>
@@ -36,46 +41,54 @@
     </header>
     <!--メイン-->
     <main class="page-main">
-      <h1>Examen d'entrée</h1>
-      <table border="1">
-          <tr>
-              <th>Comment faire une demande</th>
-              <td>application Web</td>
-          </tr>
-          <tr>
-              <th>Date d'application</th>
-              <td>Samedi 7 mars</td>
-          </tr>
-          <tr>
-              <th>Date d'examen</th>
-              <td>Samedi 21 mars</td>
-          </tr>
-          <tr>
-              <th>Contenu de la sélection</th>
-              <td>Première sélection: Projection de documents<br>
-                  Deuxième sélection: Projection académique (200 points (anglais: 100 points, mathématiques: 100 points), les deux durent 60 minutes)<br>
-                  Sélection finale: Interview
-              </td>
-          </tr>
-          <tr>
-              <th>Annonce de décès</th>
-              <td>Samedi 4 avril</td>
-          </tr>
-          <tr>
-              <th>Date limite de la procédure d'admission</th>
-              <td>Samedi 11 avril</td>
-          </tr>
-          <tr>
-              <th>Qualification d'application</th>
-              <td>Le score TOEIC est supérieur à 600 ou le score TOEFL est supérieur à 50<br>
-                  La note d'anglais et de mathématiques est B ou plus<br>
-                  Attendance at the school briefing session on the WebParticipation à la séance d'information de l'école sur le Web
-          </tr>
-          <tr>
-              <th>Capacité de recrutement</th>
-              <td>100 personnes</td>
-          </tr>
-      </table>
+        <div class="main-inner">
+            <div class="page-main__header">
+                <h1 class="page-submain__header">Examen d'entrée</h1>
+            </div>
+            <div class="main-table">
+                <table border="1" class="main-table__contents">
+                    <tr>
+                        <th>Comment faire une demande</th>
+                        <td>application Web</td>
+                    </tr>
+                    <tr>
+                        <th>Date d'application</th>
+                        <td>Samedi 7 mars</td>
+                    </tr>
+                    <tr>
+                        <th>Date d'examen</th>
+                        <td>Samedi 21 mars</td>
+                    </tr>
+                    <tr>
+                        <th>Contenu de la sélection</th>
+                        <td>Première sélection: Projection de documents<br>
+                            Deuxième sélection: Projection académique (200 points (anglais: 100 points, mathématiques: 100
+                            points), les deux durent 60 minutes)<br>
+                            Sélection finale: Interview
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Annonce de décès</th>
+                        <td>Samedi 4 avril</td>
+                    </tr>
+                    <tr>
+                        <th>Date limite de la procédure d'admission</th>
+                        <td>Samedi 11 avril</td>
+                    </tr>
+                    <tr>
+                        <th>Qualification d'application</th>
+                        <td>Le score TOEIC est supérieur à 600 ou le score TOEFL est supérieur à 50<br>
+                            La note d'anglais et de mathématiques est B ou plus<br>
+                            Attendance at the school briefing session on the WebParticipation à la séance d'information de
+                            l'école sur le Web
+                    </tr>
+                    <tr>
+                        <th>Capacité de recrutement</th>
+                        <td>100 personnes</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
