--- a/french/entranceExamination-fr.html
+++ b/french/entranceExamination-fr.html
@@ -36,6 +36,7 @@
                 </li>
                 <li class="menu-access menu" id="header-menu-access"><a href="access-fr.html">Accès</a></li>
                 <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-fr.html">Enquête</a></li>
+                <li class="menu-comment menu" id="header-menu-comment"><a href="comment-fr.html">Commentaires</a></li>
             </ol>
         </nav>
     </header>
