--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -32,6 +32,7 @@
         <li class="menu-ex menu"id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
         <li class="menu-access menu"id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
         <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
+        <li class="menu-comment menu" id="header-menu-comment"><a href="comment-ja.html">コメント</a></li>
       </ol>
     </nav>
   </header>
