--- a/english/index-en.html
+++ b/english/index-en.html
@@ -35,6 +35,7 @@
                         Examination</a></li>
                 <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
                 <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
+                <li class="menu-comment menu" id="header-menu-comment"><a href="comment-en.html">Comment</a></li>
             </ol>
         </nav>
     </header>
