--- a/english/inquiry-en.html
+++ b/english/inquiry-en.html
@@ -31,6 +31,7 @@
                 <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance Examination</a></li>
                 <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
                 <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
+                <li class="menu-comment menu" id="header-menu-comment"><a href="comment-en.html">Comment</a></li>
             </ol>
         </nav>
     </header>
