--- a/french/comment-fr.html
+++ b/french/comment-fr.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/header-en.css">
     <link rel="stylesheet" href="../css/style-ja.css">
-    <title>コメント</title>
+    <title>Commentaires</title>
 </head>
 
 <body>
@@ -24,14 +24,18 @@
         </div>
         <nav class="page-header__menu">
             <ol>
-                <li class="menu-index menu" id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
-                <li class="menu-access menu" id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
-                <li class="menu-comment menu" id="header-menu-comment"><a href="comment-ja.html">コメント</a></li>
+                <li class="menu-index menu" id="header-menu-index"><a href="index-fr.html">Accueil</a></li>
+                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-fr.html">Introduction à l'école</a>
+                </li>
+                <li class="menu-content menu" id="header-menu-content"><a href="content-fr.html">Contenu pédagogique</a>
+                </li>
+                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-fr.html">Matériel
+                        scolaire</a></li>
+                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-fr.html">Examen d'entrée</a>
+                </li>
+                <li class="menu-access menu" id="header-menu-access"><a href="access-fr.html">Accès</a></li>
+                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-fr.html">Enquête</a></li>
+                <li class="menu-comment menu" id="header-menu-comment"><a href="comment-fr.html">Commentaires</a></li>
             </ol>
         </nav>
     </header>
@@ -90,6 +94,6 @@
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
-
 <script src="../header.js"></script>
+
 </html>
