--- a/english/intro-en.html
+++ b/english/intro-en.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header-en.css">
     <link rel="stylesheet" href="../css/style-en.css">
-    <link rel="stylesheet" href="../css/index-ja.css">
     <title>Introduction</title>
 </head>
 
@@ -37,78 +36,127 @@
     </header>
     <!--メイン-->
     <main class="page-main">
-      <h1>School introduction</h1>
-      <h2>Overview of our school</h2>
-      <p>
-        Our school is committed to developing human resources who can play an active role internationally and have world-class management skills.
-        We support young people who are eager to learn, regardless of race or gate.
-      </p>
-      <h2>Development of management skills</h2>
-      <p>
-        The school offers unique curriculum and active training in order to develop rich management skills.
-        We develop practical skills and raise your abilities to a world-class level.
-      </p>
-      <h2>International School</h2>
-      <p>
-        We aim to educate international students. You usually speak English and various races, especially Japanese and French,
-        study together in the same space.You can spend three years with a lot of stimulation because of the environment where
-        there are multinational races from an early stage.
-      <h2>Breakdown of students</h2>
-      <table>
-          <tbody>
-              <tr>
-                  <td>Grade</td>
-                  <td>men</td>
-                  <td>women</td>
-              </tr>
-              <tr>
-                  <td>First grade</td>
-                  <td>55 people</td>
-                  <td>47 people</td>
-              </tr>
-              <tr>
-                  <td>Second grade</td>
-                  <td>52 people</td>
-                  <td>44 people</td>
-              </tr>
-              <tr>
-                  <td>Third grade</td>
-                  <td>50 people</td>
-                  <td>49 people</td>
-              </tr>
-          </tbody>
-      </table>
-      <h2>School itinerary</h2>
-        <p>Our school was renovated from a Japanese school in London. Until then, it was a school for Japanese people,
-           but it was reborn 10 years ago as an international school with the aim of developing international human resources.</p>
-      <h2>Club activities</h2>
-        <p>The school also focuses on club activities and carries out the following club activities.
-          We promise youthful days of high school for three years</p>
-        <h3>Athletic club activities</h3>
-          The following clubs are all male and female
-          <p>・Soccer</p>
-          <p>・Cricket</p>
-          <p>・Basketball</p>
-        <h3>Cultural club activities</h3>
-          <p>・Brass band</p>
-          <p>・Choir</p>
-          <p>・World culture study Group</p>
-          <p>・Volunteer</p>
-      <h2>Annual event</h2>
-        <p>・Entrance ceremony(September)</p>
-        <p>・Sports festival(October)</p>
-        <p>・Exchange meeting with international students(December)</p>
-        <p>・Intermediate test(January)</p>
-        <p>・Excursion(March)</p>
-        <p>・Homecoming day(March)</p>
-        <p>・term-end exam(May)</p>
-        <p>・Graduation ceremony(June)</p>
-        <p>・Long vacation(from June to September)</p>
-        <p>・Overseas homestay(July)</p>
-    </main>
-    <!--フッター-->
-    <footer class="page-footer"></footer>
-</body>
-<script src="../header.js"></script>
+      <div class="main-inner">
+        <div class="page-main__header">
+          <h1>School introduction</h1>
+        </div>
+        <div class="history">
+          <div class="contents-head">
+            <h2>School itinerary</h2>
+          </div>
+          <p>Our school was renovated from a Japanese school in London.
+             Until then, it was a school for Japanese people,
+             It was reborn 10 years ago as an international school with the aim of developing international human resources.
+          </p>
+        </div>
 
-</html>
+        <div class="overview">
+          <div class="contents-head">
+            <h2>Overview of our school</h2>
+          </div>
+          <p>
+            Our school is committed to developing human resources who can play an active role internationally and have world-class management skills.
+            We support young people who are eager to learn, regardless of race or gate.
+          </p>
+        </div>
+
+        <div class="upbringing">
+          <div class="contents-head">
+            <h2>Development of management skills</h2>
+          </div>
+          <p>
+            The school offers unique curriculum and active training in order to develop rich management skills.
+            We develop practical skills and raise your abilities to a world-class level.
+          </p>
+        </div>
+
+        <div class="international">
+          <div class="contents-head">
+            <h2>International School</h2>
+          </div>
+          <p>
+            We aim to educate international students. You usually speak English and various races, especially Japanese and French,
+            study together in the same space.You can spend three years with a lot of stimulation because of the environment where
+            there are multinational races from an early stage.
+          </p>
+        </div>
+
+        <div class="student">
+          <div class="contents-head">
+            <h2>Breakdown of students</h2>
+          </div>
+          <table class="table-student">
+              <tbody>
+                  <tr class="table-head">
+                      <td>Grade</td>
+                      <td>men</td>
+                      <td>women</td>
+                  </tr>
+                  <tr>
+                      <td class="table-grade">First grade</td>
+                      <td class="table-number">55 people</td>
+                      <td class="table-number">47 people</td>
+                  </tr>
+                  <tr>
+                      <td class="table-grade">Second grade</td>
+                      <td class="table-number">52 people</td>
+                      <td class="table-number">44 people</td>
+                  </tr>
+                  <tr>
+                      <td class="table-grade">Third grade</td>
+                      <td class="table-number">50 people</td>
+                      <td class="table-number">49 people</td>
+                  </tr>
+              </tbody>
+            </table>
+
+        </div>
+
+        <div class="club">
+          <div class="sports-picture">
+            <div class="non-sports-picture">
+              <div class="contents-head">
+                <h2>Club activities</h2>
+              </div>
+              <p>The school also focuses on club activities and carries out the following club activities.
+                We promise youthful days of high school for three years</p>
+              <h3>Athletic club activities</h3>
+                The following clubs are all male and female
+                <p>Soccer</p>
+                <p>Cricket</p>
+                <p>Basketball</p>
+              <h3>Cultural club activities</h3>
+                <p>Brass band</p>
+                <p>Choir</p>
+                <p>World culture study Group</p>
+                <p>Volunteer</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="event">
+          <div class="contents-head">
+            <h2>Annual event</h2>
+          </div>
+          <p>Entrance ceremony(September)</p>
+          <p>Sports festival(October)</p>
+          <p>Exchange meeting with international students(December)</p>
+          <p>Intermediate test(January)</p>
+          <p>Excursion(March)</p>
+          <p>Homecoming day(March)</p>
+          <p>term-end exam(May)</p>
+          <p>Graduation ceremony(June)</p>
+          <p>Long vacation(from June to September)</p>
+          <p>Overseas homestay(July)</p>
+        </div>
+      </div>
+    </main>
+
+    <!--フッター-->
+    <footer>
+
+    </footer>
+  </body>
+  <script src="../header.js"></script>
+  <script src="../effct-fade.js"></script>
+  </html>
